--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <section class="split-pane question-pane" id="questionPane">
                     <div class="preview-wrapper" id="previewWrapper">
                         <div id="markdownPreview"></div>
-                        <span id="inlineTypingCursor" class="typing-cursor hidden" contenteditable="true"></span>
+                        <span id="inlineTypingCursor" class="typing-cursor" contenteditable="true"></span>
                         <canvas id="drawingCanvas"></canvas>
                     </div>
                 </section>
