--- a/index.html
+++ b/index.html
@@ -301,8 +301,7 @@
                 <!-- Question Pane (Left) -->
                 <section class="split-pane question-pane" id="questionPane">
                     <div class="preview-wrapper" id="previewWrapper">
-                        <div id="markdownPreview"></div>
-                        <span id="inlineTypingCursor" class="typing-cursor" contenteditable="true"></span>
+                        <div id="markdownPreview" contenteditable="true"></div>
                         <canvas id="drawingCanvas"></canvas>
                     </div>
                 </section>
