--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
                     <div class="toolbar-divider"></div>
 
-                    <!-- Drawing Tools -->
+                    <!-- Drawing Tools with Popovers -->
                     <div class="drawing-tools">
                         <button class="toolbar-btn" data-tool="keyboard" title="키보드">
                             <svg viewBox="0 0 24 24">
@@ -163,24 +163,103 @@
                                 <path d="M6 8h.01M10 8h.01M14 8h.01M18 8h.01M8 12h.01M12 12h.01M16 12h.01M6 16h12" />
                             </svg>
                         </button>
-                        <button class="toolbar-btn" data-tool="pen" title="펜">
-                            <svg viewBox="0 0 24 24">
-                                <path d="M12 19l7-7 3 3-7 7-3-3z" />
-                                <path d="M18 13l-1.5-7.5L2 2l3.5 14.5L13 18l5-5z" />
-                            </svg>
-                        </button>
-                        <button class="toolbar-btn" data-tool="highlighter" title="형광펜">
-                            <svg viewBox="0 0 24 24">
-                                <path d="M9 11l-6 6v3h9l3-3" />
-                                <path d="M22 12l-4.6 4.6a2 2 0 0 1-2.8 0l-5.2-5.2a2 2 0 0 1 0-2.8L14 4" />
-                            </svg>
-                        </button>
-                        <button class="toolbar-btn" data-tool="eraser" title="지우개">
-                            <svg viewBox="0 0 24 24">
-                                <path
-                                    d="M20 20H7L3 16c-.6-.6-.6-1.5 0-2.1l10-10c.6-.6 1.5-.6 2.1 0l7 7c.6.6.6 1.5 0 2.1L13 22" />
-                            </svg>
-                        </button>
+
+                        <div class="tool-wrapper">
+                            <button class="toolbar-btn" data-tool="pen" title="펜">
+                                <svg viewBox="0 0 24 24">
+                                    <path d="M12 19l7-7 3 3-7 7-3-3z" />
+                                    <path d="M18 13l-1.5-7.5L2 2l3.5 14.5L13 18l5-5z" />
+                                </svg>
+                            </button>
+                            <div class="tool-popover hidden" id="penPopover">
+                                <div class="popover-section">
+                                    <div class="popover-label">펜 색상</div>
+                                    <div class="color-grid" data-target="pen">
+                                        <button class="color-btn active" data-color="#ffffff"></button>
+                                        <button class="color-btn" data-color="#ff6b6b"></button>
+                                        <button class="color-btn" data-color="#4ecdc4"></button>
+                                        <button class="color-btn" data-color="#ffe66d"></button>
+                                        <button class="color-btn" data-color="#a855f7"></button>
+                                        <button class="color-btn" data-color="#3b82f6"></button>
+                                        <button class="color-btn" data-color="#22c55e"></button>
+                                        <button class="color-btn" data-color="#f97316"></button>
+                                    </div>
+                                </div>
+                                <div class="popover-section">
+                                    <div class="popover-label">굵기 <span id="penSizeLabel">3</span></div>
+                                    <input type="range" class="size-slider" id="penSizeSlider" min="1" max="30"
+                                        value="3">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tool-wrapper">
+                            <button class="toolbar-btn" data-tool="highlighter" title="형광펜">
+                                <svg viewBox="0 0 24 24">
+                                    <path d="M9 11l-6 6v3h9l3-3" />
+                                    <path d="M22 12l-4.6 4.6a2 2 0 0 1-2.8 0l-5.2-5.2a2 2 0 0 1 0-2.8L14 4" />
+                                </svg>
+                            </button>
+                            <div class="tool-popover hidden" id="highlighterPopover">
+                                <div class="popover-section">
+                                    <div class="popover-label">형광펜 색상</div>
+                                    <div class="color-grid" data-target="highlighter">
+                                        <button class="color-btn active" data-color="#ffe66d"></button>
+                                        <button class="color-btn" data-color="#84fab0"></button>
+                                        <button class="color-btn" data-color="#a8edea"></button>
+                                        <button class="color-btn" data-color="#fed6e3"></button>
+                                        <button class="color-btn" data-color="#d299c2"></button>
+                                        <button class="color-btn" data-color="#89f7fe"></button>
+                                        <button class="color-btn" data-color="#ffecd2"></button>
+                                        <button class="color-btn" data-color="#c1dfc4"></button>
+                                    </div>
+                                </div>
+                                <div class="popover-section">
+                                    <div class="popover-label">굵기 <span id="highlighterSizeLabel">15</span></div>
+                                    <input type="range" class="size-slider" id="highlighterSizeSlider" min="5" max="50"
+                                        value="15">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tool-wrapper">
+                            <button class="toolbar-btn" data-tool="eraser" title="지우개">
+                                <svg viewBox="0 0 24 24">
+                                    <path
+                                        d="M20 20H7L3 16c-.6-.6-.6-1.5 0-2.1l10-10c.6-.6 1.5-.6 2.1 0l7 7c.6.6.6 1.5 0 2.1L13 22" />
+                                </svg>
+                            </button>
+                            <div class="tool-popover hidden" id="eraserPopover">
+                                <div class="popover-section">
+                                    <div class="popover-label">지우개 크기 <span id="eraserSizeLabel">15</span></div>
+                                    <input type="range" class="size-slider" id="eraserSizeSlider" min="5" max="80"
+                                        value="15">
+                                </div>
+                                <div class="popover-section">
+                                    <button class="eraser-mode-btn active" data-mode="pixel">
+                                        <svg viewBox="0 0 24 24">
+                                            <circle cx="12" cy="12" r="8" />
+                                        </svg>
+                                        선 지우기
+                                    </button>
+                                    <button class="eraser-mode-btn" data-mode="stroke">
+                                        <svg viewBox="0 0 24 24">
+                                            <path d="M4 4l16 16M20 4L4 20" />
+                                        </svg>
+                                        획 지우기
+                                    </button>
+                                </div>
+                                <div class="popover-section">
+                                    <button class="clear-all-btn" id="clearAllBtn">
+                                        <svg viewBox="0 0 24 24">
+                                            <path
+                                                d="M3 6h18M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2" />
+                                        </svg>
+                                        모두 지우기
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="toolbar-divider"></div>
